--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "firebase": "^5.2.0",
     "mongoose": "^5.2.3",
     "vue": "^2.5.2",
