--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "firebase": "^5.2.0",
+    "express": "^4.16.3",
     "mongoose": "^5.2.3",
     "vue": "^2.5.2",
-    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -36,6 +35,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
+    "nodemon": "^1.18.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -63,5 +63,15 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zzibert/cocktails.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/zzibert/cocktails/issues"
+  },
+  "homepage": "https://github.com/zzibert/cocktails#readme"
 }
