--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "mongoose": "^5.2.3",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
